--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <main>
     <section>
       <h2>🌿 나의 관심사</h2>
+      <img src="forest.jpg">
       <p>저는 식물을 키우는 걸 좋아해요. 작은 씨앗이 자라서 예쁜 꽃이나 나무가 되는 게 신기하고 즐거워요.</p>
     </section>
 
@@ -93,6 +94,7 @@
     <section>
       <h2>✨ 나의 꿈</h2>
       <p>앞으로 코딩을 더 열심히 배워서 나만의 게임이나 멋진 웹사이트를 만들고 싶어요.</p>
+      <img src="coding.jpg">
     </section>
   </main>
 
