--- a/code1010.html
+++ b/code1010.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="code1010.css">
 </head>
 <body>
+     <h2>
+      <a href="/">HOME</a>
+    </h2>
+    <hr>
     <h1>코드를 그대로 출력할꺼에요</h1>
     <p>
         &lt;pre&gt; 태그는
